--- a/index.html
+++ b/index.html
@@ -5,14 +5,17 @@
     <meta name="description" content="Webdesign for Design Majors">
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
     <link rel="icon" href="res/favicon.svg" type="image/svg=xml">
+    <link rel="stylesheet" type="text/css" href="res/global.css"/>
     <style>
     h1{color: #db9fc7}
-    p.first{font-family:'Helvetica';}
-
+    body{margin:0; padding:0;
+      font-family: 'Helvetica','Arial','Roboto', sans-serif;}
+div.rtf{max-width:60ch; margin:40px auto; padding:40px}
 
     </style>
   </head>
   <body>
+    <div class="rtf">
     <h1>One pager design</h1>
 
     <p class="first">In our first exercise, we will design a so called one pager site. One pagers are websites from a single page. Most of them has a single purpose: to make people to do something. It is Call to action.</p>
@@ -47,5 +50,6 @@
 <p>Wireframes are blueprints for websites. Websites are too complex to design them at once, like a print. Wireframes are drafts, what show the structure and the operation of thw website but not the design.</p>
 
 <p>They are easy to create and change, so ideal way to make your ideas clear. Today we show thwm to clients. That's why we don't use any real design elements (colors, images, fonts and typography). We have to make clear, that they are blueprints, not graphics designs.</p>
+</div>
   </body>
 </html>
