--- a/index.html
+++ b/index.html
@@ -6,10 +6,18 @@
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
     <link rel="icon" href="res/favicon.svg" type="image/svg=xml">
     <link rel="stylesheet" type="text/css" href="res/global.css"/>
+    <<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Noto+Sans+JP:wght@100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+
     <style>
-    h1{color: #db9fc7}
+    h1{color:rgb(190,108,197)}
+    h3{color:rgb(190,108,197)}
+    h4{color:rgb(190,108,197)}
     body{margin:0; padding:0; font-size:clamp(12px,2vw,18px);
-      font-family: 'Helvetica','Arial','Roboto', sans-serif;}
+      font-family: 'Roboto';
+    background-color:rgb(255,253,244) ;
+  color:rgb(92,62,121)}
 div.rtf{max-width:60ch; margin:40px auto; padding:40px}
 
 div.rtf p{font-size:0.9em; line-height:1.6em; margin-bottom:1.3em}
